# Qube_Servo_3_Controller

./: .gitignore  README.md  data2_0.5v.csv  data2_2v.csv  data_0.5v.csv  data_1v.csv  data_2v.csv
3d_models/: base.20260317-091703.FCBak  base.FCStd  pendulum.20260317-130835.FCBak  pendulum.FCStd  rotor.20260317-092801.FCBak  rotor.FCStd
equations/: -Note-11-29.xopp  .-Note-11-29.autosave.xopp  clean_cos.m  clean_sin.m  data2_1v.csv  data3_1v.csv  data_pendulum.csv  data_stall_1v.csv  dynamics.m  equation.md  parameterFinder.asv  parameterFinder.mlx  rotx.m  rotz.m  simulations.mlx  udledning.mlx  udledning2.mlx  udledning3.asv  udledning3.mlx  untitled.mlx
logger/: CMakeLists.txt  main.cpp
logging/: csv_logger.py
logging/Lukas_CPP_logger/: plotter.py
logging/Lukas_CPP_logger/include/: qube_servo3_driver.hpp
matlab_sim/: pid.slx  pid.slx.autosave  pid_balancing.slx  pid_balancing.slx.autosave  setup.md  swingup_switch.slx
ros2_ws/: build_and_run.sh
ros2_ws/src/pendulum_control/: CMakeLists.txt  package.xml
ros2_ws/src/pendulum_control/config/: controllers.yaml
ros2_ws/src/pendulum_control/launch/: Driver_launch.py  LQR_Driver.launch.py  LQR_Driver_launch.py  LQR_simulate.launch.py  PID_simulate.launch.py  display.launch.py  driver.launch.py  simulate.launch.py
ros2_ws/src/pendulum_control/rviz/: config.rviz
ros2_ws/src/pendulum_control/src/: classic.cpp  control.cpp  lqr_control.cpp  lqr_controller.cpp  pid_control.cpp
ros2_ws/src/pendulum_control/urdf/: qube_constants.xacro  qube_servo.urdf.xacro
ros2_ws/src/pendulum_control/urdf/joints/: base_joint.xacro  pendulum_joint.xacro  rotor_joint.xacro
ros2_ws/src/pendulum_control/urdf/links/: base_link.xacro  pendulum_link.xacro  rotor_link.xacro  world.xacro
ros2_ws/src/pendulum_control/urdf/macros/: inertia_macros.xacro
ros2_ws/src/pendulum_control/urdf/mesh/: base.stl  pendulum.stl  pendulum1.stl  rotor.stl
ros2_ws/src/pendulum_control/worlds/: world.sdf
ros2_ws/src/qube_servo3_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/qube_servo3_driver/config/: controllers.yaml  qube_params.yaml
ros2_ws/src/qube_servo3_driver/include/qube_servo3_driver/: qube_servo3_driver.hpp
ros2_ws/src/qube_servo3_driver/launch/: driver.launch.py
ros2_ws/src/qube_servo3_driver/src/: qube_servo3_driver.cpp
ros2_ws/src/qube_servo3_driver/urdf/: qube_servo3.urdf.xacro  qube_servo3_real.urdf.xacro
ros2_ws/src/qube_servo3_driver/urdf/joints/: pendulum_joint.xacro
ros2_ws/src/qube_servo3_driver/urdf/links/: pendulum_link.xacro  rotor_link.xacro
ros2_ws/src/qube_servo3_driver/urdf/macros/: inertia_macros.xacro
testing/: Test_Methods.md
